tests/miniJava/neg/000158_mutation.MiniJava
class java { public static extends Main ( String [ ] java ) { { } } }
